# rules_python

examples/build_file_generation/: BUILD.bazel
examples/build_file_generation/random_number_generator/: BUILD.bazel
