load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "__init__",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "generate_random_number",
    srcs = ["generate_random_number.py"],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "example_bin",
    srcs = ["example_bin.py"],
    visibility = ["//:__subpackages__"],
)
